# hybridgwais

./: .gitignore  README.md
example/: run2nd  run2nd-gpu  run3rd  run3rd-gpu
example/2ndorder/: 2ndorder.bed  2ndorder.bim  2ndorder.fam
example/3rdorder/: 3rdorder.bed  3rdorder.bim
src/: Args.cpp  Args.h  CMakeLists.txt  CPUProcessor.cpp  CPUProcessor.h  CUDAHostWrapper.h  FPGAConfigurationGWAIS.cpp  FPGAConfigurationGWAIS.h  FPGAHandler.cpp  FPGAHandler.h  GPUEngine.cu  GPUEngine.h  GPUHandler.h  GPUIDCreator.cpp  GPUIDCreator.h  GPUKernels.cu  GPUKernels.h  Method.cpp  Method.h  MinMaxHeap.h  PlinkParser.cpp  PlinkParser.h  Processor.cpp  Processor.h  Progress.cpp  Progress.h  ResultHandler.h  ResultView.h  SNPDB.cpp  SNPDB.h  StatusFile.h  ThreadPool.h  main.cpp  utils.h  version.cpp  version.h.template
src/CMakeModules/: FindHybridSys.cmake
src/hybridsys/: Buffer.h  BufferAllocator.h  BufferFactory.h  Device.h  DeviceCategory.cpp  DeviceCategory.h  FPGA.cpp  FPGA.h  GPU.cpp  GPU.h  Hybridsys.cpp  Hybridsys.h  Spinlock.h  ThreadUtils.cpp  ThreadUtils.h
